# l3chat

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  fly.toml  tailwind.config.js
migrations/2025-06-08-220024_create_threads_and_messages_tables/: up.sql
migrations/2025-06-09-003621_create_users_table/: down.sql  up.sql
migrations/2025-06-10-015556_add_branch_relations_to_threads/: down.sql  up.sql
migrations/2025-06-14-001958_add_title_to_threads/: down.sql  up.sql
migrations/2025-06-16-043048_create_projects_schema/: down.sql  up.sql
migrations/2025-06-18-085029_rate_limits_table/: down.sql  up.sql
migrations/2025-06-18-112012_lower_similarity_threshold/: down.sql  up.sql
scripts/: start.sh
src/: app.rs  cancellable_sse.rs  embedding_service.rs  lib.rs  main.rs  schema.rs  state.rs  supabase.rs  types.rs
src/auth/: api.rs  auth_components.rs  context.rs  mod.rs  oauth.rs  secure.rs  server.rs  types.rs
src/components/: auth_nav.rs  canvas.rs  chat.rs  dark_mode_toggle.rs  drawing.rs  embeddings.rs  footer.rs  local_embeddings.rs  markdown.rs  messagelist.rs  mod.rs  poasts.rs  projects.rs  search.rs  threadlist.rs  toast.rs
src/components/ui/: button.rs  mod.rs
src/database/: db.rs
src/embeddings_service/: local.rs  mod.rs
src/handlers/: drawing_ws.rs  mod.rs  sse.rs
src/middleware/: mod.rs  tracing.rs
src/models/: conversations.rs  mod.rs  projects.rs  users.rs
src/pages/: mod.rs  writersroom.rs
src/server_fn/: cache.rs  invalidate_poasts_cache.rs  mod.rs  projects.rs  rss.rs
src/services/: mod.rs  projects.rs  rag.rs  title_generation.rs
style/: tailwind.css
